WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215553
Fix some spelling and editorial issues
https://bugs.webkit.org/show_bug.cgi?id=215553
Summary
Fix some spelling and editorial issues
Simon Fraser (smfr)
Reported
2020-08-16 17:05:27 PDT
Fix some spelling and editorial issues
Attachments
Patch
(16.03 KB, patch)
2020-08-16 17:06 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-08-16 17:06:12 PDT
Created
attachment 406689
[details]
Patch
EWS
Comment 2
2020-08-16 23:29:59 PDT
Committed
r265746
: <
https://trac.webkit.org/changeset/265746
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406689
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-08-16 23:30:21 PDT
<
rdar://problem/67220590
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug