Fix some spelling and editorial issues https://bugs.webkit.org/show_bug.cgi?id=215553

Reviewed by Darin Adler.

"Stretches" has a t in the middle, and "padding" is singular.

* inspector/InspectorOverlay.cpp:
(WebCore::buildRendererHighlight):
* layout/FormattingContext.cpp:
(WebCore::Layout::FormattingContext::geometryForBox const):
* layout/FormattingContext.h:
* layout/blockformatting/BlockFormattingContextQuirks.cpp:
(WebCore::Layout::BlockFormattingContext::Quirks::stretchedInFlowHeight):
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layoutInFlowContent):
(WebCore::Layout::InlineFormattingContext::computedIntrinsicWidthConstraints):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::adjustBaselineAndLineHeight):
* layout/tableformatting/TableFormattingContext.cpp:
(WebCore::Layout::TableFormattingContext::setUsedGeometryForCells):
* rendering/RenderTable.cpp:
(WebCore::RenderTable::convertStyleLogicalWidthToComputedWidth):
* rendering/RenderTableCell.cpp:
* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):


Canonical link: https://commits.webkit.org/228317@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265746 268f45cc-cd09-0410-ab3c-d52691b4dbfc