Source/WebCore/layout/tableformatting/TableFormattingContext.cpp
@@ -119,7 +119,7 @@ void TableFormattingContext::setUsedGeometryForCells(LayoutUnit availableHorizon
                 // Child boxes (and runs) are always in the coordinate system of the containing block's border box.
                 // The content box (where the child content lives) is inside the padding box, which is inside the border box.
                 // In order to compute the child box top/left position, we need to know both the padding and the border offsets.  
-                // Normally by the time we start positioning the child content, we already have computed borders and paddings for the containing block.
+                // Normally by the time we start positioning the child content, we already have computed borders and padding for the containing block.
                 // This is different with table cells where the final padding offset depends on the content height as we use
                 // the padding box to vertically align the table cell content.
                 auto& formattingState = layoutState().establishedFormattingState(cellBox);
